Initial commit or update

--- a/Terms.html
+++ b/Terms.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="a.css">
 <title>Terms of Use - Udemy</title>
 </head>
 <body>
@@ -25,17 +26,30 @@
 <!-- Main Content -->
 <section>
   <h2 style="text-align:center;">Terms of Use</h2>
+  <p style="text-align:center; font-size:0.9em; color:gray;">
+    Last updated: July 2025
+  </p>
   <p style="max-width:800px; margin:auto; text-align:justify;">
-    By accessing and using our website and courses, you agree to follow these terms:
+    By accessing and using our website and courses, you agree to comply with the following Terms of Use. Please read them carefully before using our platform.
   </p>
   <ul style="max-width:800px; margin:auto;">
-    <li>Use the content for personal learning only; redistribution or resale is prohibited.</li>
-    <li>Respect copyrights and intellectual property rights of all creators.</li>
-    <li>Do not misuse our platform or engage in any harmful or illegal activities.</li>
-    <li>We may update these terms; continued use indicates acceptance of the new terms.</li>
+    <li><b>Personal Use Only:</b> All course materials and resources provided are strictly for personal, non-commercial learning purposes. Republishing, selling, or distributing content without permission is prohibited.</li>
+    <li><b>Intellectual Property:</b> All content, design, graphics, and course materials are the property of Udemy and/or individual content creators and are protected by copyright and other intellectual property laws.</li>
+    <li><b>User Conduct:</b> You agree not to use our platform for any illegal, harmful, offensive, or fraudulent purposes. You must not upload or share malicious software, spam, or content that infringes the rights of others.</li>
+    <li><b>Account Security:</b> You are responsible for maintaining the confidentiality of your account credentials and all activities carried out under your account.</li>
+    <li><b>Content Updates:</b> We may update, modify, or remove any courses, features, or content at any time to improve user experience or comply with legal requirements, without prior notice.</li>
+    <li><b>Changes to Terms:</b> These terms may be updated periodically. Continued use of the site after changes indicates your acceptance of the updated terms. We recommend checking this page regularly.</li>
+    <li><b>Disclaimers:</b> We strive to provide accurate and up-to-date content; however, we do not guarantee completeness, accuracy, or that our services will always be available without interruption.</li>
+    <li><b>Limitation of Liability:</b> Udemy is not liable for any direct, indirect, or incidental damages resulting from the use or inability to use our platform, including but not limited to data loss, business interruption, or unauthorized access.</li>
+    <li><b>Termination:</b> We reserve the right to suspend or terminate your access to our platform at any time if you violate these terms or engage in behavior harmful to our users or services.</li>
+    <li><b>Governing Law:</b> These terms are governed by and construed under the laws of your local jurisdiction, without regard to conflict of law principles.</li>
   </ul>
   <p style="max-width:800px; margin:auto; text-align:justify;">
-    Please check this page regularly to stay informed about our terms.
+    By continuing to use our platform, you acknowledge that you have read, understood, and agree to these Terms of Use.
+    If you have any questions or concerns, please <a href="ContactUs.html">contact us</a>.
+  </p>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    To learn how we collect and protect your personal data, please read our <a href="PrivacyPolicy.html">Privacy Policy</a>.
   </p>
 </section>
 <hr/>
