--- a/AboutUs.html
+++ b/AboutUs.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="a.css">
   <title>About Us - Udemy</title>
 </head>
 <body>
