--- a/courses.html
+++ b/courses.html
@@ -25,11 +25,11 @@
 
 <hr/>
 
-<nav class="breadcrumb">
+<nav class="b">
   <a href="index.html">Home</a> &gt; <span>Courses</span>
 </nav>
 
-<section class="hero">
+<section class="h">
   <h1>Top Free & Popular CS Courses</h1>
   <p>Start learning essential skills in web, AI, data, and more.</p>
 </section>
