--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
 <hr/>
 
-<nav class="breadcrumb">
+<nav class="b">
   <a href="index.html">Home</a> &gt; <span>Featured Free Courses</span>
 </nav>
 
-<section class="hero">
+<section class="h">
   <h1>Learn Anything for Free</h1>
   <p>Start your learning journey with high-bality, free courses</p>
   <a class="cta-button" href="courses.html">Explore Courses</a>
