--- a/login.html
+++ b/login.html
@@ -29,6 +29,8 @@
   <form action="#" method="post">
     <input type="email" name="email" placeholder="Email" required>
     <br>
+    <input type="password" name="password" placeholder="Enter password" required>
+    <br>
     <button type="submit">&#x1F4E7 Continue with Email</button>
   </form>
 
